made a background scene for the drop zone

--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Bird Muxic Mixer</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css" media="screen">
+	<title>Bird Music Mixer</title>
+  <link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>Bird Music Mixer</h1>
-  <section id="container">
-    <h2 class="hidden">Drop Zone</h2>
-    <div id="dropZone"></div>
+  <h1 class="hidden">Music Mixer Wrapper</h1>
+  <section id="wrapper">
+    <h2>Bird Music Mixer</h2>
+    <div id="dropZone"><h2 class="hidden">Drop Zone</h2></div>
 
-    <h2 class="hidden">Birds Box</h2>
+    <h2 class="hidden">Icon Containers</h2>
     <div id="birdsContainer">
-      <h3 class="hidden">Bird Icons</h3>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
-      <section class="icons"></section>
+      <section class="icons"><h2 class="hidden">Bird Icon1</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon2</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon3</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon4</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon5</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon6</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon7</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon8</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon9</h2></section>
+      <section class="icons"><h2 class="hidden">Bird Icon10</h2></section>
     </div>
   </section>
 
