--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2 class="hidden">Bird Selection</h2>
 
       <section class="birdIcon bass"> 
-        <img src="images/dawn.png" alt="Dawn" class="birdImage" id="dawn" draggable="true">
+        <div class="birdImage" id="dawn" draggable="true"></div>
       </section>
       <section class="birdIcon bass"><h2 class="hidden">Bird Icon2</h2></section>
       <section class="birdIcon bass"><h2 class="hidden">Bird Icon3</h2></section>
