added reset and fixed audio bug

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <button name="light2" type="button">
           <img src="images/icons/lightFX2.svg" alt="Lighting Effects 2">
         </button>
+
+        <a href="index.html">
+          <img src="images/reset.svg" alt="reset button">
+        </a>
       </div>
     </header>
     
