--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8">
 	<title>Bird Beats</title>
   <link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 <body>
   <section id="wrapper">
@@ -16,13 +18,13 @@
       <div id="fxContainer">
         <h2 class="hidden">FX Buttons</h2>
         
-        <button name="cloud1" type="button">
+        <button id="cloud1" name="cloud1" type="button">
           <img src="images/icons/cloudFX1.svg" alt="Cloud Effects 1">
         </button>
-        <button name="light1" type="button">
+        <button id="light1" name="light1" type="button">
           <img src="images/icons/lightFX1.svg" alt="Lighting Effects 1">
         </button>
-        <button name="light2" type="button">
+        <button id="light2" name="light2" type="button">
           <img src="images/icons/lightFX2.svg" alt="Lighting Effects 2">
         </button>
 
