added second bird, made js placeBirds function

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <section class="birdIcon melody"><h2 class="hidden">Bird Icon7</h2></section>
       <section class="birdIcon melody"><h2 class="hidden">Bird Icon8</h2></section>
       <section class="birdIcon melody"><h2 class="hidden">Bird Icon9</h2></section>
-      <section class="birdIcon synth"><h2 class="hidden">Bird Icon10</h2></section>
+      <section class="birdIcon synth">
+        <div class="birdImage" id="billy" draggable="true"></div>
+      </section>
       <section class="birdIcon synth"><h2 class="hidden">Bird Icon11</h2></section>
       <section class="birdIcon synth"><h2 class="hidden">Bird Icon12</h2></section>
     </div>
